--- a/project/src/index.css
+++ b/project/src/index.css
@@ -1,3 +1,8 @@
+html,body{
+  width: 100%;
+  font-size: 8px;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,7 +30,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
