选图第一步+redux

--- a/project/src/App.less
+++ b/project/src/App.less
@@ -17,3 +17,14 @@
     }
   }
 }
+.content-main{
+    margin: 32px auto 0;
+    width: 100%;
+    max-width: 1200px;
+    height: 80vh;
+    max-height: 85rem;
+    border: 1px solid #707070;
+    border-radius: 2.5rem;
+    box-shadow: 0 0.2rem 1.2rem #00000088;
+    background-color: #fff;
+}
