--- a/project/src/style/nav.less
+++ b/project/src/style/nav.less
@@ -2,6 +2,7 @@
     height: 64px;
     background: #08979C;
     text-align: center;
+    position: relative;
     .nav-content{
         display: inline-block;
         width: 100%;
@@ -20,6 +21,10 @@
                 text-align: center;
                 line-height: 64px;
                 cursor: pointer;
+                a {
+                    color: #ffffff;
+                    font-weight: 600;
+                }
                 .router-name{
                     margin-left: 8px;
                 }
@@ -27,6 +32,15 @@
                     background-color: #5CDBD3;
                 }
             }
+        }
+    }
+    .nav-logo{
+        position: absolute;
+        top:50%;
+        transform: translateY(-50%);
+        right:2rem;
+        img {
+            width: 6rem;
         }
     }
 }
