计分第一模块

--- a/project/src/style/selectMap/map.less
+++ b/project/src/style/selectMap/map.less
@@ -17,6 +17,7 @@
         left: 50%;
         bottom: 8rem;
         transform: translate(-50%);
+        z-index: 11;
         .button-confirm{
             background-color: #36CFC9;
             margin-left: 8rem;
@@ -31,6 +32,7 @@
     height: 100%;
     position: relative;
     overflow: auto;
+    z-index: 10;
     .title {
         margin:6rem 0 3rem;
         font-size: 8rem;
