--- a/project/src/style/scoring/scoring.less
+++ b/project/src/style/scoring/scoring.less
@@ -1,10 +1,10 @@
-.map-main{
+.scoring-main{
     box-sizing: border-box;
     width: 100%;
     height: 100%;
     position: relative;
     overflow: auto;
-    .map-confused{
+    .scoring-confused{
         position: absolute;
         bottom:3px;
         right:3px;
@@ -17,6 +17,7 @@
         left: 50%;
         bottom: 8rem;
         transform: translate(-50%);
+        z-index: 11;
         .button-confirm{
             background-color: #36CFC9;
             margin-left: 8rem;
@@ -31,6 +32,7 @@
     height: 100%;
     position: relative;
     overflow: auto;
+    z-index: 10;
     .title {
         margin:6rem 0 3rem;
         font-size: 8rem;
@@ -50,11 +52,16 @@
         justify-content: center;
         margin-top: 7rem;
     }
-    .choose_option{
+    .diving_option{
         display: flex;
         justify-content: center;
         align-items: center;
-        .map_show{
+        .diving_title{
+            font-size:3rem;
+            font-weight: 600;
+            color:#36CFC9
+        }
+        .diving-num{
             width: 30rem;
             background: #ffffff !important;
             color: #000000 !important;
@@ -62,18 +69,27 @@
         .button{
             margin-left: 1rem;
         }
-        .button-show{
+        .button-generate{
             background-color: #36CFC9;
         }
     }
-    .choose_list{
-        width: 60%;
+    .enter_num{
+        width: 80%;
         height: 40%;
         margin: 8rem auto 0;
         font-size: 4rem;
         font-weight: 600;
         color: #36CFC9;
         overflow-y: auto;
+        list-style: none;
+        .rank{
+            display: inline-block;
+            vertical-align: middle;
+            margin: 1rem 3rem;
+            .rank_input{
+                width: 8rem;
+            }
+        }
     }
 }
 
