完成计分模块的开发

--- a/project/src/style/scoring/scoring.less
+++ b/project/src/style/scoring/scoring.less
@@ -75,7 +75,7 @@
     }
     .enter_num{
         width: 80%;
-        height: 40%;
+        height: 50%;
         margin: 8rem auto 0;
         font-size: 4rem;
         font-weight: 600;
@@ -91,5 +91,11 @@
             }
         }
     }
+}
+.button{
+    margin-left: 1rem;
+}
+.button-generate{
+    background-color: #36CFC9;
 }
 
