修复TS语法错误，添加单独排名窗口

--- a/project/src/style/scoring/scoring.less
+++ b/project/src/style/scoring/scoring.less
@@ -37,6 +37,9 @@
         margin:6rem 0 3rem;
         font-size: 8rem;
         color: #36CFC9;
+        .rank_list{
+            margin-left: 2rem;
+        }
     }
     .drag{
         display: inline-block;
