--- a/project/src/App.less
+++ b/project/src/App.less
@@ -3,6 +3,7 @@
   text-align: center;
   .background {
     height: 100%;
+    position: relative;
     &::before{
       content: '';
       background: #e6fffb url('@/assets/background.png') no-repeat fixed; 
@@ -20,11 +21,18 @@
 .content-main{
     margin: 32px auto 0;
     width: 100%;
-    max-width: 1200px;
+    max-width: 150rem;
     height: 80vh;
     max-height: 85rem;
     border: 1px solid #707070;
     border-radius: 2.5rem;
     box-shadow: 0 0.2rem 1.2rem #00000088;
     background-color: #fff;
+}
+.rank_win{
+  position: absolute;
+  max-width: 150rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
