添加修改和删除选手名称功能

--- a/project/src/style/scoring/scoring.less
+++ b/project/src/style/scoring/scoring.less
@@ -55,27 +55,6 @@
         justify-content: center;
         margin-top: 7rem;
     }
-    .diving_option{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        .diving_title{
-            font-size:3rem;
-            font-weight: 600;
-            color:#36CFC9
-        }
-        .diving-num{
-            width: 30rem;
-            background: #ffffff !important;
-            color: #000000 !important;
-        }
-        .button{
-            margin-left: 1rem;
-        }
-        .button-generate{
-            background-color: #36CFC9;
-        }
-    }
     .enter_num{
         width: 80%;
         height: 50%;
@@ -93,6 +72,9 @@
                 width: 8rem;
             }
         }
+        span{
+            cursor: pointer;
+        }
     }
 }
 .button{
@@ -102,3 +84,29 @@
     background-color: #36CFC9;
 }
 
+.button-delete{
+    background-color: #ff0000;
+    color:#ffffff
+}
+
+.diving_option{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .diving_title{
+        font-size:3rem;
+        font-weight: 600;
+        color:#36CFC9
+    }
+    .diving-num{
+        width: 30rem;
+        background: #ffffff !important;
+        color: #000000 !important;
+    }
+    .button{
+        margin-left: 1rem;
+    }
+    .button-generate{
+        background-color: #36CFC9;
+    }
+}
