添加地图分类功能，更改地图格式，修改彩蛋效果

--- a/project/src/style/home.less
+++ b/project/src/style/home.less
@@ -17,9 +17,11 @@
         font-size: 6rem;
         font-weight: 600;
         color:#36CFC9;
+        user-select: none;
         img{
             display: inline-block;
             height: 6rem;
+            user-select: none;
         }
     }
     .home-description{
@@ -32,6 +34,7 @@
         font-size: 3rem;
         color:#36CFC9;
         font-weight: 600;
+        user-select: none;
         .home-details{
             margin:0;
         }
