--- a/project/src/style/selectMap/map.less
+++ b/project/src/style/selectMap/map.less
@@ -50,6 +50,7 @@
     .transfer{
         display: flex;
         justify-content: center;
+        text-align: left;
         margin-top: 7rem;
     }
     .choose_option{
