--- a/project/src/style/selectMap/map.less
+++ b/project/src/style/selectMap/map.less
@@ -15,7 +15,7 @@
     .button-box{
         position: absolute;
         left: 50%;
-        bottom: 8rem;
+        bottom: 6rem;
         transform: translate(-50%);
         z-index: 11;
         .button-confirm{
@@ -77,6 +77,11 @@
         font-weight: 600;
         color: #36CFC9;
         overflow-y: auto;
+    }
+    .tip{
+        font-size: 2rem;
+        font-weight: 600;
+        color: #36CFC9;
     }
 }
 
